[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
description = "Modular HTTP server library, threaded handlers and async performance"
categories = ["network-programming", "web-programming::http-server", "web-programming::websocket"]
edition = "2021"
keywords = ["web", "http", "server", "async", "threaded"]
license = "MIT OR Apache-2.0"
name = "servlin"
repository = "https://github.com/mleonhard/servlin"
version = "0.5.1"

[features]
default = []
json = ["serde", "serde_json"]
urlencoded = ["serde", "serde_urlencoded"]

[dependencies]
async-fs = "2"
async-net = "2"
fixed-buffer = { version = "1", features = ["futures-io"] }
futures-io = "0.3"
futures-lite = "2"
include_dir = { version = "0.7", optional = true }
#libflate = "1"
permit = "^0.2"
rand = { version = "0.8", features = ["small_rng"] }
safe-regex = "0.3"
safina-executor = { version = "0.3" }
safina-sync = { version = "0.2" }
safina-timer = { version = "0.1" }
serde = { version = "1", optional = true, features = ["derive"] }
# TODO: Prevent these deps from appearing as features.
serde_json = { version = "1", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
temp-dir = "0.1"
temp-file = "0.1"
url = "2"

[dev-dependencies]

[[example]]
name = "html_form"
required-features = ["urlencoded"]

[[example]]
name = "json_api"
required-features = ["json"]
