[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
description = "Modular HTTP server library, threaded handlers and async performance"
categories = ["network-programming", "web-programming::http-server", "web-programming::websocket"]
edition = "2021"
keywords = ["web", "http", "server", "async", "threaded"]
license = "MIT OR Apache-2.0"
name = "servlin"
repository = "https://github.com/mleonhard/servlin"
version = "0.7.1"

[features]
default = []
json = ["serde", "serde_json"]
urlencoded = ["serde", "serde_urlencoded"]

[dependencies]
async-fs = { version = "2", default-features = false, features = [] }
async-net = { version = "2", default-features = false, features = [] }
fixed-buffer = { version = "1", default-features = false, features = ["futures-io"] }
futures-io = { version = "0.3", default-features = false, features = [] }
futures-lite = { version = "2", default-features = false, features = [] }
include_dir = { version = "0.7", optional = true }
#libflate = "1"
permit = { version = "^0.2", default-features = false, features = [] }
rand = { version = "0.8", default-features = false, features = ["getrandom", "small_rng"] }
safe-regex = { version = "0.3", default-features = false, features = [] }
safina = { version = "0.6", path = "../safina-rs/safina", default-features = false, features = ["executor", "sync", "threadpool", "timer"] }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
# TODO: Prevent these deps from appearing as features.
serde_json = { version = "1", optional = true, default-features = false, features = ["std"] }
serde_urlencoded = { version = "0.7", optional = true, default-features = false, features = [] }
temp-dir = { version = "0.1", default-features = false, features = [] }
temp-file = { version = "0.1", default-features = false, features = [] }
url = { version = "2", default-features = false, features = [] }

[dev-dependencies]
safina = { version = "0.6", path = "../safina-rs/safina", default-features = false, features = ["async_test"] }

[[example]]
name = "html_form"
required-features = ["urlencoded"]

[[example]]
name = "json_api"
required-features = ["json"]
